--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <a href="#"></a>
                 </div>
                 <div class="article-block-footer">
-                    <a href="#">更多 <span class="fa fa-angle-double-right"></span></a>
+                    <!--<a href="#">更多 <span class="fa fa-angle-double-right"></span></a>-->
                 </div>
             </div>
         </div>
@@ -60,13 +60,14 @@
                     <!--<a href="#">版本：Beta V1.0<br>更新日志（2018-1-30）： 页面建设，添加了前端相关资料。</a>-->
                     <!--<a href="#">版本：Beta V1.1<br>更新日志（2018-2-1）： 页面建设，添加了Python,java等资料。</a>-->
                     <!--<a href="#">版本：Beta V1.2<br>更新日志（2018-2-14）： 页面维护</a>-->
-                    <a href="#">版本：Beta V1.3<br>更新日志（2018-2-27）： 新增-网络攻防</a>
+                    <!--<a href="#">版本：Beta V1.3<br>更新日志（2018-2-27）： 新增-网络攻防</a>-->
+                    <a href="#">版本：Beta V1.4<br>更新日志（2018-03-03）： 新增-资源网站，（预计4月份进行重写、建站、实现响应式）</a>
                 </div>
                 <div class="article-news">
                     <a href="#"></a>
                 </div>
                 <div class="article-block-footer">
-                    <a href="#">更多 <span class="fa fa-angle-double-right"></span></a>
+                    <!--<a href="#">更多 <span class="fa fa-angle-double-right"></span></a>-->
                 </div>
             </div>
         </div>
@@ -91,7 +92,7 @@
                     <a href="#"></a>
                 </div>
                 <div class="article-block-footer">
-                    <a href="#">更多 <span class="fa fa-angle-double-right"></span></a>
+                    <!--<a href="#">更多 <span class="fa fa-angle-double-right"></span></a>-->
                 </div>
             </div>
         </div>
@@ -116,7 +117,7 @@
                     <a href="#"></a>
                 </div>
                 <div class="article-block-footer">
-                    <a href="#">更多 <span class="fa fa-angle-double-right"></span></a>
+                    <!--<a href="#">更多 <span class="fa fa-angle-double-right"></span></a>-->
                 </div>
             </div>
         </div>
@@ -142,7 +143,7 @@
                     <a href="#"></a>
                 </div>
                 <div class="article-block-footer">
-                    <a href="#">更多 <span class="fa fa-angle-double-right"></span></a>
+                    <!--<a href="#">更多 <span class="fa fa-angle-double-right"></span></a>-->
                 </div>
             </div>
         </div>
@@ -167,7 +168,7 @@
                     <a href="#"></a>
                 </div>
                 <div class="article-block-footer">
-                    <a href="#">更多 <span class="fa fa-angle-double-right"></span></a>
+                    <!--<a href="#">更多 <span class="fa fa-angle-double-right"></span></a>-->
                 </div>
             </div>
         </div>
@@ -192,23 +193,23 @@
                     <a href="#"></a>
                 </div>
                 <div class="article-block-footer">
-                    <a href="#">更多 <span class="fa fa-angle-double-right"></span></a>
+                    <!--<a href="#">更多 <span class="fa fa-angle-double-right"></span></a>-->
                 </div>
             </div>
         </div>
 
-        <!--c++-->
+        <!--资源站点-->
         <div class="article-block">
             <div class="article-block-top">
                 <div class="article-block-ornament"></div>
-                <div class="article-block-top-title"><h2>C++</h2></div>
+                <div class="article-block-top-title"><h2>资源站点</h2></div>
             </div>
             <div class="article-block-content">
                 <div class="article-news">
-                    <a href="#">等待更新</a>
+                    <a href="http://www.jb51.net/books/"><b>脚本之家</b>：提供高质量计算机类电子书下载</a>
                 </div>
                 <div class="article-news">
-                    <a href="#"></a>
+                    <a href="http://www.57fx.com/search/"><b>57分享</b>：百度网盘资源检索</a>
                 </div>
                 <div class="article-news">
                     <a href="#"></a>
@@ -217,7 +218,7 @@
                     <a href="#"></a>
                 </div>
                 <div class="article-block-footer">
-                    <a href="#">更多 <span class="fa fa-angle-double-right"></span></a>
+                    <!--<a href="#">更多 <span class="fa fa-angle-double-right"></span></a>-->
                 </div>
             </div>
         </div>
@@ -242,7 +243,7 @@
                     <a href="#"></a>
                 </div>
                 <div class="article-block-footer">
-                    <a href="#">更多 <span class="fa fa-angle-double-right"></span></a>
+                    <!--<a href="#">更多 <span class="fa fa-angle-double-right"></span></a>-->
                 </div>
             </div>
         </div>
