--- a/index.html
+++ b/index.html
@@ -11,28 +11,31 @@
 
 </head>
 <body>
-<div class="header">
-    <div class="header-introduce">
-        <p>属于大家的学习社区</p>
+    <div class="header-wrap">
+        <div class="header">
+            <div class="header-introduce">
+                <p>New Coder</p>
+            </div>
+        </div>
     </div>
-</div>
+
 
     <div class="content">
         <!--前端-->
         <div class="article-block">
             <div class="article-block-top">
                 <div class="article-block-ornament"></div>
-                <div class="article-block-top-title"><h2>前端技术栈</h2></div>
+                <div class="article-block-top-title"><h2>前端</h2></div>
             </div>
             <div class="article-block-content">
                 <div class="article-news">
-                    <a href="">计算机相关pdf书籍<br><b>因为百度网盘限制，此资料上传在群文件</b></a>
+                    <a href=""><b>因为百度网盘限制，书籍资料上传在群文件，此外，绝大部分书籍可以在脚本之家免费下载。</b></a>
                 </div>
                 <div class="article-news">
-                    <a href="https://pan.baidu.com/s/1bqot5NL">前端基础全套</a>
+                    <a href="https://pan.baidu.com/s/1bqot5NL">传智前端基础14期（学生录屏，质量一般）</a>
                 </div>
                 <div class="article-news">
-                    <a href="#"></a>
+                    <a href="https://pan.baidu.com/s/17AMkW524GFipPBB63RuHSA">传智前端1期（老师录屏，质量较好）<b>提取密码:2333</b></a>
                 </div>
                 <div class="article-news">
                     <a href="#"></a>
@@ -51,17 +54,18 @@
             </div>
             <div class="article-block-content">
                 <div class="article-news">
-                    <a href="#">所有资源分享方式为百度云盘，链接失效请联系群主。</a>
+                    <a href="#">资源分享方式为百度云盘，链接失效请联系群主。</a>
                 </div>
                 <div class="article-news">
-                    <a href="#">因时间有限，自建页面，资源不足，还望谅解，想要获得或共享资源，提出改善意见，请联系社区群群主[柔情]。</a>
+                    <a href="#">自建页面，不求利益，页面粗糙，还望谅解。想要获得或共享资源，提出改善意见。请联系社区群群主[柔情]。</a>
                 </div>
                 <div class="article-news">
                     <!--<a href="#">版本：Beta V1.0<br>更新日志（2018-1-30）： 页面建设，添加了前端相关资料。</a>-->
                     <!--<a href="#">版本：Beta V1.1<br>更新日志（2018-2-1）： 页面建设，添加了Python,java等资料。</a>-->
                     <!--<a href="#">版本：Beta V1.2<br>更新日志（2018-2-14）： 页面维护</a>-->
                     <!--<a href="#">版本：Beta V1.3<br>更新日志（2018-2-27）： 新增-网络攻防</a>-->
-                    <a href="#">版本：Beta V1.4<br>更新日志（2018-03-03）： 新增-资源网站，（预计4月份进行重写、建站、实现响应式）</a>
+                    <!-- <a href="#">版本：Beta V1.4<br>更新日志（2018-03-03）： 新增-资源网站，（预计4月份进行重写、建站、实现响应式）</a> -->
+                     <a href="#">版本：Beta V1.5<br>更新日志（2018-3-13）： 新增部分资源，（预计4月份进行重写、建站、实现响应式）</a>
                 </div>
                 <div class="article-news">
                     <a href="#"></a>
@@ -105,13 +109,13 @@
             </div>
             <div class="article-block-content">
                 <div class="article-news">
-                    <a href="https://pan.baidu.com/s/1pNj1UbT">Java基础全套视频</a>
+                    <a href="https://pan.baidu.com/s/1pNj1UbT">Java基础（刘意）</a>
                 </div>
                 <div class="article-news">
-                    <a href="#"></a>
+                    <a href="https://pan.baidu.com/s/1xaxo_MgQZMcLn8kr5_sPsQ">java相关实战项目：（点餐系统、网上商城等）  <b>提取密码:2333</b></a>
                 </div>
                 <div class="article-news">
-                    <a href="#"></a>
+                    <a href="https://pan.baidu.com/s/1h5m7vPYdWxMy_4MgRKU3hA">传智播客35期基础班+就业班  <b>提取密码:2333</b></a>
                 </div>
                 <div class="article-news">
                     <a href="#"></a>
@@ -173,15 +177,15 @@
             </div>
         </div>
 
-        <!--c-->
+        <!--PHP-->
         <div class="article-block">
             <div class="article-block-top">
                 <div class="article-block-ornament"></div>
-                <div class="article-block-top-title"><h2>C</h2></div>
+                <div class="article-block-top-title"><h2>PHP</h2></div>
             </div>
             <div class="article-block-content">
                 <div class="article-news">
-                    <a href="#">等待更新</a>
+                    <a href="https://pan.baidu.com/s/1JTjbKipaYv3PWzpbHFKVlw">传智PHP35期 <b>提取密码:2333</b></a>
                 </div>
                 <div class="article-news">
                     <a href="#"></a>
@@ -234,7 +238,7 @@
                     <a href="https://pan.baidu.com/s/1dHaZ0Pz">2015cracer入侵 入门到精通视频教程</a>
                 </div>
                 <div class="article-news">
-                    <a href="https://pan.baidu.com/s/1pMEuyHd">网络攻防相关教程目录-来源（HACK学习呀）</a>
+                    <a href="https://pan.baidu.com/s/1pMEuyHd">网络攻防相关教程目录</a>
                 </div>
                 <div class="article-news">
                     <a href="#"></a>
@@ -250,7 +254,10 @@
 
         </div>
 
-       <div class="footer"></div>
+       <div class="footer">
+           <!-- <P>据说只要一个程序员生前兢兢业业，勤勤恳恳，死后就会进入程序员天堂，在那里会有72个新垣结衣围着他跳舞。</P> -->
+           <p>©2018 CYan,  All rights reserved.</p>
+       </div>
 
 
 </body>
