--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
-    <title>资源导航</title>
+    <title>AREA丨资源导航</title>
 
     <!-- 引入Bootstrap核心样式表文件 -->
     <link href="lib/bootstrap/css/bootstrap.css" rel="stylesheet">
@@ -33,7 +33,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">资源库</a>
+          <a class="navbar-brand" href="index.html">AREA</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -50,7 +50,7 @@
     <div class="container" id="container-top">
       <div class="starter-template">
         <img id="logo" class="img-responsive center-block logo" src="img/studentIcon.svg" alt="icon">
-        <h1 class="">资源库</h1>
+        <h1 class="">AREA 资源导航</h1>
         <p class="lead">不在寻找上浪费时间。<br>高效的学习，生活，工作。</p>
       </div>
     </div>
