--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">资源库</a>
+          <a class="navbar-brand" href="index.html">Area</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -47,10 +47,18 @@
 
     <div class="jumbotron jumbotron-main">
          <div class="container">
-            <h1>资源库</h1>
-            <p>发挥群体的力量，获取及更新学习资料。</p>
-            <p>降低学习门槛与成本。</p>
-            <p>一切免费。</p>
+            <h3>资源库</h3>
+            <p>发挥群体的力量，获取及共享学习资料。<br/>打破利益壁垒，降低学习门槛与成本。<br/>而且免费。</p>
+
+            <h3>关于本站</h3>
+            <p>在校学生独立制作，无测试人员，发现页面/资料错误，<a href="https://jq.qq.com/?_wv=1027&k=5gGyUPQ">联系管理人员。</a><br/>学业繁重，更新缓慢，敬请谅解。</p>
+            <br/>
+
+            <h3>历史更新日志</h3>
+            <p>静态网站建设（1.1） 2018年3月26日<br/>
+            1、移动端网站设计、搭建。<br/>2、部分资源录入。<br/>3、服务器准备及其他模块设计。<br/>4、预计4中旬制作完成pc端界面。</p>
+
+
           <!--   <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p> -->
         </div>
     </div>
